@@ -161,6 +161,160 @@ class AroundSelection(Selection):
     def __repr__(self):
         return "<'AroundSelection' "+repr(self.cutoff)+" around "+repr(self.sel)+">"
 
+class SphericalLayerSelection(Selection):
+    def __init__(self, sel, inRadius, exRadius, periodic=None):
+        Selection.__init__(self)
+        self.sel = sel
+        self.inRadius = inRadius
+        self.exRadius = exRadius
+        if periodic is None:
+            self.periodic = flags['use_periodic_selections']
+    def _apply(self,group):
+        # make choosing _fast/_slow configurable (while testing)
+        if flags['use_KDTree_routines'] in (True,'fast','always'):
+            return self._apply_KDTree(group)
+        else:
+            return self._apply_distmat(group)
+    def _apply_KDTree(self, group):
+        """Selection using KDTree but periodic = True not supported.
+        (KDTree routine is ca 15% slower than the distance matrix one)
+        """
+        sys_indices = numpy.array([a.number for a in self._group_atoms_list])
+        sys_coor = Selection.coord[sys_indices]
+        sel_atoms = self.sel._apply(group) ## group is wrong, should be universe (?!)
+        sel_CoG = AtomGroup(sel_atoms).centerOfGeometry()
+        self.ref = numpy.array((sel_CoG[0], sel_CoG[1], sel_CoG[2]))
+        if self.periodic:
+            pass # or warn? -- no periodic functionality with KDTree search
+        from MDAnalysis.KDTree.NeighborSearch import CoordinateNeighborSearch
+        CNS = CoordinateNeighborSearch(sys_coor)  # cache the KDTree for this selection/frame?
+        found_ExtIndices = CNS.search(self.ref,self.exRadius)
+        found_IntIndices = CNS.search(self.ref,self.inRadius)
+        found_indices = list(set(found_ExtIndices) - set(found_IntIndices))
+        res_atoms = [self._group_atoms_list[i] for i in found_indices]  
+        return set(res_atoms)
+    def _apply_distmat(self,group):
+        sel_atoms = self.sel._apply(group) ## group is wrong, should be universe (?!)
+        sel_CoG = AtomGroup(sel_atoms).centerOfGeometry()
+        sys_atoms_list = [a for a in (self._group_atoms)]  # list needed for back-indexing
+        sys_ag = AtomGroup(sys_atoms_list)
+        sel_CoG_str = str("point ") + str(sel_CoG[0]) +" "+str(sel_CoG[1])+ " "+str(sel_CoG[2])+ " "+str(self.exRadius)+" and not point "+str(sel_CoG[0]) +" "+str(sel_CoG[1])+ " "+str(sel_CoG[2])+ " "+str(self.inRadius)
+        sel = sys_ag.selectAtoms(sel_CoG_str)
+        res_atoms = AtomGroup(set(sel))
+        if self.periodic:
+            box = group.dimensions[:3]  # ignored with KDTree
+        else:
+            box = None
+        return set(res_atoms)
+    def __repr__(self):
+        return "<'SphericalLayerSelection' inner radius "+repr(self.inRadius)+", external radius "+repr(self.exRadius)+" centered in "+repr(self.sel)+">"
+
+class SphericalZoneSelection(Selection):
+    def __init__(self, sel, cutoff, periodic=None):
+        Selection.__init__(self)
+        self.sel = sel
+        self.cutoff = cutoff
+        self.sqdist = cutoff*cutoff
+        if periodic is None:
+            self.periodic = flags['use_periodic_selections']
+    def _apply(self,group):
+        # make choosing _fast/_slow configurable (while testing)
+        if flags['use_KDTree_routines'] in (True,'fast','always'):
+            return self._apply_KDTree(group)
+        else:
+            return self._apply_distmat(group)
+    def _apply_KDTree(self, group):
+        """Selection using KDTree but periodic = True not supported.
+        (KDTree routine is ca 15% slower than the distance matrix one)
+        """
+        sys_indices = numpy.array([a.number for a in self._group_atoms_list])
+        sys_coor = Selection.coord[sys_indices]
+        sel_atoms = self.sel._apply(group) ## group is wrong, should be universe (?!)
+        sel_CoG = AtomGroup(sel_atoms).centerOfGeometry()
+        self.ref = numpy.array((sel_CoG[0], sel_CoG[1], sel_CoG[2]))
+        if self.periodic:
+            pass # or warn? -- no periodic functionality with KDTree search
+        from MDAnalysis.KDTree.NeighborSearch import CoordinateNeighborSearch
+        CNS = CoordinateNeighborSearch(sys_coor)  # cache the KDTree for this selection/frame?
+        found_indices = CNS.search(self.ref,self.cutoff)
+        res_atoms = [self._group_atoms_list[i] for i in found_indices]  # make list numpy array and use fancy indexing?
+        return set(res_atoms)
+    def _apply_distmat(self,group):
+        sel_atoms = self.sel._apply(group) ## group is wrong, should be universe (?!)
+        sel_CoG = AtomGroup(sel_atoms).centerOfGeometry()
+        sys_atoms_list = [a for a in (self._group_atoms)]  # list needed for back-indexing
+        sys_ag = AtomGroup(sys_atoms_list)
+        sel_CoG_str = str("point ") + str(sel_CoG[0]) +" "+str(sel_CoG[1])+ " "+str(sel_CoG[2])+ " "+str(self.cutoff)
+        sel = sys_ag.selectAtoms(sel_CoG_str)
+        res_atoms = AtomGroup(set(sel))
+        if self.periodic:
+            box = group.dimensions[:3]  # ignored with KDTree
+        else:
+            box = None
+        return set(res_atoms)
+    def __repr__(self):
+        return "<'SphericalZoneSelection' radius "+repr(self.cutoff)+" centered in "+repr(self.sel)+">"
+
+class CylindricalLayerSelection(Selection):    
+    def __init__(self, sel, inRadius, exRadius, zmax, zmin ,periodic=None):
+        Selection.__init__(self)
+        self.sel = sel
+        self.inRadius = inRadius
+        self.exRadius = exRadius
+        self.zmax = zmax
+        self.zmin = zmin
+        self.periodic = flags['use_periodic_selections']
+    def _apply(self,group):
+        #KDTree function not implementable
+        return self._apply_distmat(group)
+    def _apply_distmat(self,group):
+        sel_atoms = self.sel._apply(group)
+        sel_CoG = AtomGroup(sel_atoms).centerOfGeometry()
+        sys_atoms_list = [a for a in (self._group_atoms)]  
+        sys_ag = AtomGroup(sys_atoms_list)
+        sel_CoG_exRad = str("prop ( x - ") + str(sel_CoG[0]) +") * ( x - "+str(sel_CoG[0])+") + ( y -  "+str(sel_CoG[1])+") * ( y - " +str(sel_CoG[1])+") <= "+ str(self.exRadius*self.exRadius)  
+        sel_CoG_inRad = str("prop ( x - ") + str(sel_CoG[0]) +") * ( x - "+str(sel_CoG[0])+") + ( y -  "+str(sel_CoG[1])+") * ( y - " +str(sel_CoG[1])+") >= "+ str(self.inRadius * self.inRadius)  
+        sel_Cog_z = str("prop z > ") + str(self.zmin) +" and prop z < "+ str(self.zmax)
+        sel_str = sel_CoG_exRad +" and  "+sel_CoG_inRad+" and "+sel_Cog_z
+        sel =  sys_ag.selectAtoms(sel_str)
+        res_atoms = sel
+        if self.periodic:
+            box = group.dimensions[:3]  
+        else:
+            box = None
+        return set(res_atoms)
+    def __repr__(self):
+        return "<'CylindricalLayerSelection' inner radius "+repr(self.inRadius)+", external radius "+repr(self.exRadius)+", zmax "+repr(self.zmax)+", zmin "+repr(self.zmin)+">"
+
+class CylindricalZoneSelection(Selection):    
+    def __init__(self, sel, exRadius, zmax, zmin ,periodic=None):
+        Selection.__init__(self)
+        self.sel = sel
+        self.exRadius = exRadius
+        self.zmax = zmax
+        self.zmin = zmin
+        self.periodic = flags['use_periodic_selections']
+    def _apply(self,group):
+        #KDTree function not implementable
+        return self._apply_distmat(group)
+    def _apply_distmat(self,group):
+        sel_atoms = self.sel._apply(group) 
+        sel_CoG = AtomGroup(sel_atoms).centerOfGeometry()
+        sys_atoms_list = [a for a in (self._group_atoms)]  # list needed for back-indexing
+        sys_ag = AtomGroup(sys_atoms_list)
+        sel_CoG_exRad = str("prop ( x - ") + str(sel_CoG[0]) +") * ( x - "+str(sel_CoG[0])+") + ( y -  "+str(sel_CoG[1])+") * ( y - " +str(sel_CoG[1])+") <= "+ str(self.exRadius*self.exRadius)  
+        sel_Cog_z = str("prop z > ") + str(self.zmin) +" and prop z < "+ str(self.zmax)  
+        sel_str = sel_CoG_exRad +" and "+sel_Cog_z
+        sel = sys_ag.selectAtoms(sel_str)
+        res_atoms = sel
+        if self.periodic:
+            box = group.dimensions[:3]  
+        else:
+            box = None
+        return set(res_atoms)
+    def __repr__(self):
+        return "<'CylindricalZoneSelection' radius "+repr(self.exRadius)+", zmax "+repr(self.zmax)+", zmin "+repr(self.zmin)+">"
+
 class PointSelection(Selection):
     def __init__(self, x, y, z, cutoff, periodic=None):
         Selection.__init__(self)
@@ -460,7 +614,8 @@ class BondedSelection(Selection):
         return "<'BondedSelection' to "+ repr(self.sel)+" >"
 
 class PropertySelection(Selection):
-    """Some of the possible properties:
+    """
+    Some of the possible properties:
     x, y, z, radius, mass,
     """
     def __init__(self, prop, operator, value, abs=False):
@@ -470,21 +625,32 @@ class PropertySelection(Selection):
         self.value = value
         self.abs = abs
     def _apply(self, group):
-        # For efficiency, get a reference to the actual numpy position arrays
-        if self.prop in ("x", "y", "z"):
-            p = getattr(Selection.coord, '_'+self.prop)
-            indices = numpy.array([a.number for a in group.atoms])
+        verificationArray = self.prop.split() +  self.value.split()
+        if 'x' in verificationArray or 'y' in verificationArray or 'z' in verificationArray:
+            if 'x' in verificationArray:
+                px = numpy.array(getattr(Selection.coord, '_'+'x'))
+            if 'y' in verificationArray:
+                py = numpy.array(getattr(Selection.coord, '_'+'y'))
+            if 'z' in verificationArray:
+                pz = numpy.array(getattr(Selection.coord, '_'+'z'))
+            #left side of the inequation    
+            new_prop = self.prop.replace('x','px').replace('y','py').replace('z','pz').\
+            replace('cos','numpy.cos').replace('sin','numpy.sin').replace('tan',' numpy.tan')
+            #right side of the inequation
+            new_value = self.value.replace('x','px').replace('y','py').replace('z','pz').\
+            replace('cos','numpy.cos').replace('sin','numpy.sin').replace('tan','numpy.tan')
             if not self.abs:
-                # XXX Hack for difference in numpy.nonzero between version < 1. and version > 1
-                res = numpy.nonzero(self.operator(p[indices], self.value))
+                if 'x' or 'y' or 'z' in (self.prop.split() or self.value.split()):
+                    #eval(), numpy function to evaluate both sides of the inequation
+                    res = numpy.nonzero(self.operator(eval(new_prop), eval(new_value))) 
             else:
-                res = numpy.nonzero(self.operator(numpy.abs(p[indices]), self.value))
+                res = numpy.nonzero(self.operator(numpy.abs(eval(new_prop)), eval(new_value)))
             if type(res) == tuple: res = res[0]
             result_set = [group.atoms[i] for i in res]
         elif self.prop == "mass":
-            result_set = [a for a in group.atoms if self.operator(a.mass,self.value)]
+            result_set = [a for a in group.atoms if self.operator(a.mass,eval(self.value))]
         elif self.prop == "charge":
-            result_set = [a for a in group.atoms if self.operator(a.charge,self.value)]
+            result_set = [a for a in group.atoms if self.operator(a.charge,eval(self.value))]
         return set(result_set)
     def __repr__(self):
         if self.abs: abs_str = " abs "
@@ -520,6 +686,10 @@ class SelectionParser:
     AND = 'and'
     OR = 'or'
     AROUND = 'around'
+    SPHLAYER = 'sphlayer'
+    SPHZONE = 'sphzone'
+    CYLAYER = 'cylayer'
+    CYZONE = 'cyzone'
     POINT = 'point'
     BYRES = 'byres'
     BONDED = 'bonded'
@@ -554,14 +724,15 @@ class SelectionParser:
                       (RESNAME, ResidueNameSelection), (NAME, AtomNameSelection),
                       (TYPE, AtomTypeSelection), (BYRES, ByResSelection),
                       (BYNUM, ByNumSelection), (PROP, PropertySelection),
-                      (AROUND, AroundSelection), (POINT, PointSelection),
-                      (NUCLEIC, NucleicSelection), (PROTEIN, ProteinSelection),
+                      (AROUND, AroundSelection),(SPHLAYER, SphericalLayerSelection),(SPHZONE, SphericalZoneSelection),  
+                      (CYLAYER, CylindricalLayerSelection), (CYZONE, CylindricalZoneSelection),
+                      (POINT, PointSelection),(NUCLEIC, NucleicSelection), (PROTEIN, ProteinSelection),
                       (BB, BackboneSelection), (NBB, NucleicBackboneSelection),
                       (BASE, BaseSelection), (SUGAR, NucleicSugarSelection),
                       #(BONDED, BondedSelection), not supported yet, need a better way to walk the bond lists
                       (ATOM, AtomSelection)])
     associativity = dict([(AND, "left"), (OR, "left")])
-    precedence = dict([(AROUND, 1), (POINT, 1), (BYRES, 1), (BONDED, 1), (AND, 3), (OR, 3), (NOT,5 )])
+    precedence = dict([(AROUND, 1),(SPHLAYER, 1),(SPHZONE, 1),(CYLAYER, 1),(CYZONE, 1), (POINT, 1), (BYRES, 1), (BONDED, 1), (AND, 3), (OR, 3), (NOT,5)])
 
     # Borg pattern: http://aspn.activestate.com/ASPN/Cookbook/Python/Recipe/66531
     _shared_state = {}
@@ -614,6 +785,28 @@ class SelectionParser:
             dist = self.__consume_token()
             exp = self.__parse_expression(self.precedence[op])
             return self.classdict[op](exp, float(dist))
+        elif op in (self.SPHLAYER):
+            inRadius = self.__consume_token()
+            exRadius = self.__consume_token()
+            exp = self.__parse_expression(self.precedence[op])
+            return self.classdict[op](exp, float(inRadius), float(exRadius))
+        elif op in (self.SPHZONE):
+            dist = self.__consume_token()
+            exp = self.__parse_expression(self.precedence[op])
+            return self.classdict[op](exp, float(dist))
+        elif op in (self.CYLAYER):
+            inRadius = self.__consume_token()
+            exRadius = self.__consume_token()
+            zmax = self.__consume_token()
+            zmin = self.__consume_token()            
+            exp = self.__parse_expression(self.precedence[op])
+            return self.classdict[op](exp, float(inRadius), float(exRadius), float(zmax), float(zmin))
+        elif op in (self.CYZONE):
+            exRadius = self.__consume_token()
+            zmax = self.__consume_token()
+            zmin = self.__consume_token()            
+            exp = self.__parse_expression(self.precedence[op])
+            return self.classdict[op](exp, float(exRadius), float(zmax), float(zmin))
         elif op in (self.POINT):
             dist = self.__consume_token()
             x = self.__consume_token()
@@ -659,13 +852,25 @@ class SelectionParser:
                 lower, upper = map(int, selrange.groups())
             return self.classdict[op](lower,upper)
         elif op == self.PROP:
-            prop = self.__consume_token()
-            if prop == "abs":
+            prop = "" #left side parser
+            while True:
+                a = self.__consume_token()
+                if ( a != '<' and a != '>' and a != '<=' and a != '>=' and a != '!=' and a != '==') :
+                    prop += a+" "
+                else:
+                    oper = a
+                    break
+            if prop.split()[0] == str("abs") :
                 abs = True
-                prop = self.__consume_token()
-            else: abs = False
-            oper = self.__consume_token()
-            value = float(self.__consume_token())
+                prop = prop.split(' ',1)[1]
+            else: abs = False            
+            value = ""#right side parser
+            while True:
+                a = self.__peek_token()
+                if ( a != 'and' and a != 'or' and a != 'not' and a != 'EOF') :
+                    value += self.__consume_token()+" "
+                else:
+                    break
             ops = dict([(self.GT, numpy.greater), (self.LT, numpy.less),
                         (self.GE, numpy.greater_equal), (self.LE, numpy.less_equal),
                         (self.EQ, numpy.equal), (self.NE, numpy.not_equal)])
